--- a/Client/package.json
+++ b/Client/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/swc-win32-x64-msvc": "^15.4.6",
+    "@tanstack/react-query": "^5.84.1",
     "@tinymce/tinymce-react": "^6.3.0",
     "axios": "^1.11.0",
     "keen-slider": "^6.8.6",
@@ -18,7 +20,7 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "recharts": "^3.1.0",
-    "sweetalert2": "^11.22.2",
+    "sweetalert2": "^11.6.13",
     "swiper": "^11.2.10",
     "tinymce": "^8.0.1"
   },
